--- a/package.json
+++ b/package.json
@@ -1,12 +1,7 @@
 {
-  "name": "react-typescript-webpack2-cssmodules-postcss",
+  "name": "kndb",
   "version": "1.0.0",
   "license": "MIT",
-  "author": {
-    "name": "Jose Quinto Zamora",
-    "email": "quintorel@hotmail.com",
-    "url": "https://blog.josequinto.com"
-  },
   "description": "",
   "keywords": [
     "react",
@@ -22,10 +17,6 @@
     "postCSS",
     "webpack"
   ],
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/jquintozamora/react-typescript-webpack2-cssModules-postCSS.git"
-  },
   "engines": {
     "npm": "6.4.1",
     "node": "10.15.1"
