--- a/tsconfig.json
+++ b/tsconfig.json
@@ -53,8 +53,8 @@
             "react",
             "react-dom",
             "webpack-env"
-        ]                                        /* Type declaration files to be included in compilation. */
-        // "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
+        ],                                        /* Type declaration files to be included in compilation. */
+        "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
 
         /* Source Map Options */
         // "sourceRoot": "./",                    /* Specify the location where debugger should locate TypeScript files instead of source locations. */
