--- a/package.json
+++ b/package.json
@@ -67,12 +67,14 @@
     "jest": "24.8.0",
     "lint-staged": "9.4.2",
     "mini-css-extract-plugin": "0.8.0",
+    "node-sass": "^4.13.0",
     "postcss-custom-properties": "9.0.2",
     "postcss-import": "12.0.1",
     "postcss-loader": "3.0.0",
     "postcss-nesting": "7.0.1",
     "react-hot-loader": "4.12.15",
     "react-test-renderer": "16.11.0",
+    "sass-loader": "^8.0.0",
     "source-map-loader": "0.2.4",
     "style-loader": "1.0.0",
     "stylelint": "11.1.1",
