--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "tslint": "5.20.1",
     "tslint-config-prettier": "1.18.0",
     "tslint-react": "4.1.0",
+    "tslint-config-airbnb": "5.11.1",
     "typescript": "3.7.2",
     "uglifyjs-webpack-plugin": "2.2.0",
     "webpack": "4.41.2",
