--- a/package.json
+++ b/package.json
@@ -40,9 +40,11 @@
   "dependencies": {
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.3",
+    "@types/react-router-dom": "^5.1.2",
     "moment": "2.24.0",
     "react": "16.11.0",
-    "react-dom": "16.11.0"
+    "react-dom": "16.11.0",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
     "@types/enzyme": "3.10.3",
