--- a/package.json
+++ b/package.json
@@ -1,46 +1,30 @@
 {
   "name": "kndb",
   "version": "1.0.0",
-  "license": "MIT",
   "description": "",
-  "keywords": [
-    "react",
-    "reactjs",
-    "boilerplate",
-    "hot",
-    "reload",
-    "hmr",
-    "live",
-    "typescript",
-    "tslint",
-    "cssModules",
-    "postCSS",
-    "webpack"
-  ],
+  "author": {
+    "name": "Evgenii V"
+  },
   "engines": {
     "npm": "6.4.1",
     "node": "10.15.1"
   },
   "scripts": {
-    "start": "node --harmony ./scripts/start.js",
-    "poststart": "npm run dev",
     "dev": "webpack-dev-server --mode development --open --config ./webpack/webpack.config.js --env.env=dev",
-    "build:prod:bundleVisualizer": "npm run build -- --progress --profile --env.addons=bundleVisualizer",
-    "build:prod:bundleAnalyzer": "npm run build -- --env.addons=bundleAnalizer",
-    "stats": "npm run build:prod:bundleAnalyzer",
-    "build:prod:stats": "npm run build -- --progress --profile --json > ./dist/stats/stats.json",
     "build": "webpack --mode production --config ./webpack/webpack.config.js --env.env=prod",
     "test": "jest --env=jsdom",
     "lint": "tslint -c tslint.json 'app/**/*.ts' --exclude 'app/**/*.d.ts'",
     "test:coverage": "npm run test && codecov --token=700afad4-77fd-4af9-83b4-dd59f4d87e26",
-    "precommit": "lint-staged",
-    "debug:prod": "npm run debug -- --env.env=prod",
-    "debug": "node --inspect-brk ./node_modules/webpack/bin/webpack.js --config ./webpack/webpack.config.js"
+    "precommit": "lint-staged"
   },
   "dependencies": {
+    "@types/classnames": "^2.2.9",
+    "@types/lodash": "^4.14.149",
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.3",
-    "moment": "2.24.0",
+    "antd": "^3.25.2",
+    "classnames": "^2.2.6",
+    "lodash": "^4.17.15",
     "react": "16.11.0",
     "react-dom": "16.11.0"
   },
