--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kndb",
+  "name": "poke",
   "version": "1.0.0",
   "description": "",
   "author": {
@@ -23,6 +23,7 @@
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.3",
     "antd": "^3.25.2",
+    "axios": "^0.19.0",
     "classnames": "^2.2.6",
     "lodash": "^4.17.15",
     "react": "16.11.0",
@@ -36,6 +37,8 @@
     "@types/webpack-env": "1.14.1",
     "acorn": "7.1.0",
     "autoprefixer": "9.7.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "codecov": "3.6.1",
     "compression-webpack-plugin": "3.0.0",
     "copy-webpack-plugin": "5.0.4",
@@ -65,9 +68,9 @@
     "ts-jest": "24.1.0",
     "ts-loader": "6.2.1",
     "tslint": "5.20.1",
+    "tslint-config-airbnb": "5.11.1",
     "tslint-config-prettier": "1.18.0",
     "tslint-react": "4.1.0",
-    "tslint-config-airbnb": "5.11.1",
     "typescript": "3.7.2",
     "uglifyjs-webpack-plugin": "2.2.0",
     "webpack": "4.41.2",
@@ -98,7 +101,8 @@
     ],
     "moduleNameMapper": {
       "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/test/unit/__mocks__/fileMock.js",
-      "\\.(css)$": "identity-obj-proxy"
+      "\\.(css)$": "identity-obj-proxy",
+      "^@/(.*)$": "<rootDir>/src/$1"
     },
     "snapshotSerializers": [
       "enzyme-to-json/serializer"
