--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@types/react": "16.9.11",
     "@types/react-dom": "16.9.3",
     "@types/react-router-dom": "^5.1.2",
+    "firebase": "^7.14.5",
+    "firebaseui": "^4.5.0",
     "moment": "2.24.0",
     "react": "16.11.0",
     "react-dom": "16.11.0",
